[project]
name = "btrcache"
version = "0.1.0"
description = "High-performance caching tools, memoization decorators, and cache collections for Python."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "ruff>=0.15.16",
]

[tool.poe.tasks]
start = "uv run -m src"
set-dev = "pre-commit install"
pre-commit = "pre-commit run --all-files"
check = "ruff check ./src"
check-fix = "ruff check ./src --fix"
format = "ruff format ./src"
types = "pyright"

[tool.ruff]
include = ["src/**"]
extend-exclude = ["*.mako"]
line-length = 100
format.quote-style = "double"
format.indent-style = "space"
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["D203", "D213"]

[tool.pyright]
include = ["src"]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "error"
reportImplicitOverride = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
