[project]
name = "btrcache"
version = "0.1.0"
description = "High-performance caching tools, memoization decorators, and cache collections for Python."
authors = [
  { name="Lucas Dias", email="lucas@azdias.com.br" },
]
maintainers = [
  { name="Lucas Dias", email="lucas@azdias.com.br" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/lucas-azdias/btrcache?tab=readme-ov-file"
Source = "https://github.com/lucas-azdias/btrcache"
Issues = "https://github.com/lucas-azdias/btrcache/issues"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling>=1.30.1", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.poe.tasks]
start = "uv run -m src"
set-dev = "pre-commit install"
pre-commit = "pre-commit run --all-files"
check = "ruff check ./src"
check-fix = "ruff check ./src --fix"
format = "ruff format ./src"
types = "pyright"

[tool.ruff]
include = ["src/**", "tests/**"]
extend-exclude = ["*.mako"]
line-length = 100
format.quote-style = "double"
format.indent-style = "space"
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["D203", "D213"]

[tool.pyright]
include = ["src", "tests"]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "error"
reportImplicitOverride = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"

[tool.hatch]
build.targets.wheel.packages = ["src/btrcache"]
build.hooks.vcs.version-file = "src/btrcache/__version__.py"
version.source = "vcs"
